<resources>
    <string name="app_name">Location</string>
    <string name="version">Version:</string>
    <string name="splash_screen_logo_content_description">Splash Screen Logo</string>

    <string name="instruction_add_location">Add Location</string>
    <string name="addLocation_location_name">Location Name</string>
    <string name="addLocation_location_best_feature"> Location\'s Best Feature</string>
    <string name="addLocation_location_type">Location Type</string>
    <string name="addLocation_location_number_of_visits"> Number of Visits</string>


    <string name="action_add_location">Add Location</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_back">Back</string>


    <string name="title_activity_maps">Location Map</string>
    <string name="action_no">No</string>
    <string name="action_yes">Yes</string>
    <string name="mapactivity_add_location_dialog_message">Would you like to add a Location point?</string>

    <string name="details_view_image">Details View Image</string>
</resources>
